--- a/project/public/index.html
+++ b/project/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script src="https://kit.fontawesome.com/b169c50e64.js" crossorigin="anonymous"></script>
+
     <title>IWish</title>
   </head>
   <body>
